--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ body {
 </div>
 
 <div id='blue'>
-<p id='viewportP'>hellow ss </p>
+<p id='viewportP'>hellow a </p>
 <p id='widthImg'>hellow aa </p>
 <p id='lefpos'>hellow aa </p>
 </div>
@@ -94,18 +94,18 @@ hammertime.on('pinch', resize);
 function panImage (e) {
 
     // Configure X pan
-    var imgWidth = parseInt(getComputedStyle(myElement).width),
-        minX = 0,
-        maxX = viewportWidth - imgWidth,
-        posLeft = parseInt(getComputedStyle(targetImg).left),
-        totalX  =  posLeft + e.deltaX;
+    // var imgWidth = parseInt(getComputedStyle(myElement).width),
+    //     minX = 0,
+    //     maxX = viewportWidth - imgWidth,
+    //     posLeft = parseInt(getComputedStyle(targetImg).left),
+    //     totalX  =  posLeft + e.deltaX;
 
-    if(totalX > minX) {
-        totalX = minX ;
-    } else if (totalX < maxX) {
-        totalX = maxX;
-    }
-    targetImg.style.left = totalX + 'px';
+    // if(totalX > minX) {
+    //     totalX = minX ;
+    // } else if (totalX < maxX) {
+    //     totalX = maxX;
+    // }
+    // targetImg.style.left = totalX + 'px';
 
     // Configure Y pan
     var imgHeight = parseInt(getComputedStyle(myElement).height),
