--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@ p { font-size: 60px;}
 #blue {
     border: 1px solid blue;
 }
-#blue:hover {
-        zoom: 2;
-}
+
 
 body, div, img {
     padding: 0;
@@ -49,7 +47,7 @@ body {
 </div>
 
 <div id='blue'>
-<p id='viewportP'>aaa qq </p>
+<p id='viewportP'>b qq </p>
 <p id='widthImg'>hellow aa </p>
 <p id='lefpos'>hellow aa </p>
 </div>
@@ -136,7 +134,6 @@ function resize (e) {
     var minZoom = viewportWidth;
     var maxZoom = viewportWidth * 3;
 
-    hammertime.trigger('pan', panImage);
 
     //Corner case: Zooming-in and edge is revealed
     var maxX = viewportWidth - imgWidth;
