--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ body {
 </div>
 
 <div id='blue'>
-<p id='viewportP'>aas qq </p>
+<p id='viewportP'>222 qq </p>
 <p id='widthImg'>hellow aa </p>
 <p id='lefpos'>hellow aa </p>
 </div>
@@ -121,7 +121,7 @@ function panImage (e) {
 
     jQuery('#viewportP').html('vH ' + viewportHeight);
     jQuery('#widthImg').html('imgw ' + maxY);
-    jQuery('#lefpos').html('posTop ' + posTop);
+    jQuery('#lefpos').html('posTopz ' + posTop);
 
 }
 
