--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ body {
 </div>
 
 <div id='blue'>
-<p id='viewportP'>aa qq </p>
+<p id='viewportP'>11 qq </p>
 <p id='widthImg'>hellow aa </p>
 <p id='lefpos'>hellow aa </p>
 </div>
@@ -98,7 +98,7 @@ function panImage (e) {
         posLeft = parseInt(getComputedStyle(targetImg).left),
         totalX  =  posLeft + e.deltaX;
 
-    if(totalX > minX) {
+    if(imgWidth < viewportWidth || totalX > minX) {
         totalX = minX ;
     } else if (totalX < maxX) {
         totalX = maxX;
@@ -112,7 +112,7 @@ function panImage (e) {
         posTop = parseInt(getComputedStyle(targetImg).top),
         newY  =  posTop + e.deltaY;
 
-    if(newY > minY || imgHeight < viewportHeight) {
+    if(imgHeight < viewportHeight || newY > minY) {
         newY = minY ;
     } else if (newY < maxY) {
         newY = maxY;
@@ -150,7 +150,7 @@ function resize (e) {
     var maxX = viewportWidth - imgWidth;
     var posLeft = parseInt(getComputedStyle(targetImg).left);
 
-    if (posLeft < maxX) {
+    if (posLeft != 0) {
         posLeft = maxX;
         targetImg.style.left = posLeft + 'px';
     }
