--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ body {
 </div>
 
 <div id='blue'>
-<p id='viewportP'>11 qq </p>
+<p id='viewportP'>22 qq </p>
 <p id='widthImg'>hellow aa </p>
 <p id='lefpos'>hellow aa </p>
 </div>
@@ -79,7 +79,7 @@ hammertime.get('tap').set({ enable: false });
 // hammertime.get('pan').set({ enable: false });
 hammertime.get('press').set({ enable: false });
 hammertime.get('rotate').set({ enable: false });
-// hammertime.get('swipe').set({ enable: false });
+hammertime.get('swipe').set({ enable: false });
 
 // jQuery('#textbox').html(minWidth);
 
@@ -167,7 +167,7 @@ function resize (e) {
 
     if (posTop != 0) {
         posTop = maxY;
-        targetImg.style.left = posTop + 'px';
+        targetImg.style.top = posTop + 'px';
     }
 
     jQuery('#viewportP').html('vH ' + viewportHeight);
