--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ body {
 </div>
 
 <div id='blue'>
-<p id='viewportP'>22 qq </p>
+<p id='viewportP'>11 qq </p>
 <p id='widthImg'>hellow aa </p>
 <p id='lefpos'>hellow aa </p>
 </div>
@@ -150,7 +150,7 @@ function resize (e) {
     var maxX = viewportWidth - imgWidth;
     var posLeft = parseInt(getComputedStyle(targetImg).left);
 
-    if (posLeft != 0) {
+    if (posLeft < maxX) {
         posLeft = maxX;
         targetImg.style.left = posLeft + 'px';
     }
@@ -165,7 +165,7 @@ function resize (e) {
     var maxY = viewportHeight - imgHeight;
     var posTop = parseInt(getComputedStyle(targetImg).top);
 
-    if (posTop != 0) {
+    if (posTop < maxY) {
         posTop = maxY;
         targetImg.style.top = posTop + 'px';
     }
