--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ body {
 </div>
 
 <div id='blue'>
-<p id='viewportP'>aa qq </p>
+<p id='viewportP'>11 qq </p>
 <p id='widthImg'>hellow aa </p>
 <p id='lefpos'>hellow aa </p>
 </div>
@@ -105,23 +105,25 @@ function panImage (e) {
     // }
     // targetImg.style.left = totalX + 'px';
 
-    // Configure Y pan
-    var imgHeight = parseInt(getComputedStyle(myElement).height),
-        minY = 0,
-        maxY = viewportHeight - imgHeight,
-        posTop = parseInt(getComputedStyle(targetImg).top),
-        newY  =  posTop + e.deltaY;
 
-    if(imgHeight < viewportHeight || newY > minY) {
-        newY = minY ;
-    } else if (newY < maxY) {
-        newY = maxY;
-    }
-    targetImg.style.top = newY + 'px';
 
-    jQuery('#viewportP').html('vH ' + viewportHeight);
-    jQuery('#widthImg').html('imgw ' + maxY);
-    jQuery('#lefpos').html('posTopz ' + posTop);
+    // // Configure Y pan
+    // var imgHeight = parseInt(getComputedStyle(myElement).height),
+    //     minY = 0,
+    //     maxY = viewportHeight - imgHeight,
+    //     posTop = parseInt(getComputedStyle(targetImg).top),
+    //     newY  =  posTop + e.deltaY;
+
+    // if(imgHeight < viewportHeight || newY > minY) {
+    //     newY = minY ;
+    // } else if (newY < maxY) {
+    //     newY = maxY;
+    // }
+    // targetImg.style.top = newY + 'px';
+
+    // jQuery('#viewportP').html('vH ' + viewportHeight);
+    // jQuery('#widthImg').html('imgw ' + maxY);
+    // jQuery('#lefpos').html('posTopz ' + posTop);
 
 }
 
