--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@ body {
 #wrapper {
     border: 2px solid yellow;
     position: relative;
-    height: 100vh;
-    width: 100vw;
+/*    height: 100vh;
+    width: 100vw;*/
 }
 
 #targetImg {
@@ -89,7 +89,7 @@ hammertime.on('pinch', resize);
 Hammer(document.getElementById('blue')).on('tap', function(e) {
     var imgWidth = parseInt(getComputedStyle(wrapper).width);
     var imgHeight = parseInt(getComputedStyle(wrapper).height);
-    jQuery('#viewportP').html('vH1 ' + imgHeight + ' vw: ' + imgWidth);
+    jQuery('#viewportP').html('vHq ' + imgHeight + ' vw: ' + imgWidth);
 });
 
 
