--- a/index.html
+++ b/index.html
@@ -43,10 +43,9 @@ body {
 
 <body>
 
-<div id='blue'>
-    <p id='viewportP'>111 qq </p>
-    <p id='widthImg'>hellow aa </p>
-    <p id='lefpos'>hellow aa </p>
+<div id='green'>
+    <p id='green1'>111 qq </p>
+    <p id='green2'>hellow aa </p>
 </div>
 
 
@@ -54,7 +53,11 @@ body {
     <img id='targetImg' src="http://2.bp.blogspot.com/-VQJMK8PRnI0/UjYaglEkV5I/AAAAAAAAACg/N2MkW6iorr0/s1600/30192_1600x1200-4-cute-cats.jpg" />
 </div>
 
-
+<div id='blue'>
+    <p id='viewportP'>111 qq </p>
+    <p id='widthImg'>hellow aa </p>
+    <p id='lefpos'>hellow aa </p>
+</div>
 
 
 <script src="./hammer.min.js"></script>
@@ -86,14 +89,16 @@ hammertime.get('swipe').set({ enable: false });
 hammertime.on('pan', panImage);
 hammertime.on('pinch', resize);
 
-Hammer(document.getElementById('blue')).on('tap', function(e) {
-    // var imgWidth = parseInt(getComputedStyle(wrapper).width);
-    var imgHeight = parseInt(getComputedStyle(wrapper).height);
-var viewportWidth = Math.max(document.documentElement.clientWidth, window.innerWidth || 0);
-var viewportHeight = Math.max(document.documentElement.clientHeight, window.innerHeight || 0);
-    jQuery('#viewportP').html('xvH ' + viewportHeight + ' vw: ' + viewportWidth);
-    jQuery('#widthImg').html(imgHeight);
-});
+
+jQuery('#green').hide();
+// Hammer(document.getElementById('blue')).on('tap', function(e) {
+//     // var imgWidth = parseInt(getComputedStyle(wrapper).width);
+//     var imgHeight = parseInt(getComputedStyle(wrapper).height);
+// var viewportWidth = Math.max(document.documentElement.clientWidth, window.innerWidth || 0);
+// var viewportHeight = Math.max(document.documentElement.clientHeight, window.innerHeight || 0);
+//     jQuery('#green1').html('xvH ' + viewportHeight + ' vw: ' + viewportWidth);
+//     jQuery('#green2').html(imgHeight);
+// });
 
 
 function panImage (e) {
@@ -136,9 +141,12 @@ function panImage (e) {
 
 
 function resize (e) {
-    // imgWidth & imgHeight have to be local due to orientation change
+    // These variables need to be local due to orientation changing
     var imgWidth = parseInt(getComputedStyle(wrapper).width),
-        imgHeight = parseInt(getComputedStyle(wrapper).height);
+        imgHeight = parseInt(getComputedStyle(wrapper).height),
+        viewportWidth = Math.max(document.documentElement.clientWidth, window.innerWidth || 0),
+        viewportHeight = Math.max(document.documentElement.clientHeight, window.innerHeight || 0);
+
     var deltaY = e.deltaY;
     var newWidth = imgWidth - deltaY;
 
