--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ function panImage (e) {
     }
     targetImg.style.top = newTop + 'px';
 
-    jQuery('#viewportP').html('vH ' + viewportHeight);
+    jQuery('#viewportP').html('imgH ' + imgHeight + ' vH ' + viewportHeight);
     jQuery('#widthImg').html('imgw ' + maxTop);
     jQuery('#lefpos').html('posTopz ' + posTop);
 
