--- a/index.html
+++ b/index.html
@@ -90,15 +90,19 @@ hammertime.on('pan', panImage);
 hammertime.on('pinch', resize);
 
 
-jQuery('#green').hide();
-// Hammer(document.getElementById('blue')).on('tap', function(e) {
-//     // var imgWidth = parseInt(getComputedStyle(wrapper).width);
-//     var imgHeight = parseInt(getComputedStyle(wrapper).height);
-// var viewportWidth = Math.max(document.documentElement.clientWidth, window.innerWidth || 0);
-// var viewportHeight = Math.max(document.documentElement.clientHeight, window.innerHeight || 0);
-//     jQuery('#green1').html('xvH ' + viewportHeight + ' vw: ' + viewportWidth);
-//     jQuery('#green2').html(imgHeight);
-// });
+// jQuery('#green').hide();
+Hammer(document.getElementById('blue')).on('tap', function(e) {
+    // var imgWidth = parseInt(getComputedStyle(wrapper).width);
+    var imgHeight = parseInt(getComputedStyle(wrapper).height);
+var viewportWidth = Math.max(document.documentElement.clientWidth, window.innerWidth || 0);
+var viewportHeight = Math.max(document.documentElement.clientHeight, window.innerHeight || 0);
+
+    var frameWidth = window.frameElement.offsetWidth;
+    var frameHeight = window.frameElement.offsetHeight;
+
+    jQuery('#green1').html('xvH ' + frameHeight + ' vw: ' + frameWidth);
+    jQuery('#green2').html(imgHeight);
+});
 
 
 function panImage (e) {
