--- a/index.html
+++ b/index.html
@@ -117,6 +117,8 @@ var imgWidth = parseInt(getComputedStyle(wrapper).width),
     thisBody.style.width = '100%'
     wrapper.style.width = '100%';
 
+    targetImg.style.top = '0';
+    targetImg.style.left = '0';
 
 
 }
