--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@ body {
 
 
 <div id='wrapper' >
-    <!-- <img id='targetImg' src="Travel_MoneyTips.png" alt="" /> -->
-    <img id='targetImg' src="http://2.bp.blogspot.com/-VQJMK8PRnI0/UjYaglEkV5I/AAAAAAAAACg/N2MkW6iorr0/s1600/30192_1600x1200-4-cute-cats.jpg" />
+    <img id='targetImg' src="Travel_MoneyTips.png" alt="" />
+    <!-- <img id='targetImg' src="http://2.bp.blogspot.com/-VQJMK8PRnI0/UjYaglEkV5I/AAAAAAAAACg/N2MkW6iorr0/s1600/30192_1600x1200-4-cute-cats.jpg" /> -->
 </div>
 
 <div id='blue'>
