--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@ body {
     <!-- <img id='targetImg' src="http://2.bp.blogspot.com/-VQJMK8PRnI0/UjYaglEkV5I/AAAAAAAAACg/N2MkW6iorr0/s1600/30192_1600x1200-4-cute-cats.jpg" /> -->
 </div>
 
-<div id='blue'>
+<!-- <div id='blue'>
     <p id='viewportP'>111 qq </p>
     <p id='widthImg'>hellow aa </p>
     <p id='lefpos'>hellow aa </p>
 </div>
-
+ -->
 
 <script src="./hammer.min.js"></script>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
@@ -197,8 +197,8 @@ function resize (e) {
     targetImg.style.left = newLeft + 'px';
     targetImg.style.top = newTop + 'px';
 
-    jQuery('#viewportP').html('newLeft ' + newLeft);
-    jQuery('#widthImg').html('newTop ' + newTop);
+    // jQuery('#viewportP').html('newLeft ' + newLeft);
+    // jQuery('#widthImg').html('newTop ' + newTop);
 
 
 
