--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@ body {
     <img id='targetImg' src="http://2.bp.blogspot.com/-VQJMK8PRnI0/UjYaglEkV5I/AAAAAAAAACg/N2MkW6iorr0/s1600/30192_1600x1200-4-cute-cats.jpg" />
 </div>
 
-<!-- <div id='blue'>
-    <p id='viewportP'>111 qq </p>
-    <p id='widthImg'>hellow aa </p>
-    <p id='lefpos'>hellow aa </p>
+<div id='blue'>
+    <p id='blue1'>111 qq </p>
+    <p id='blue2'>hellow aa </p>
+    <p id='blue3'>hellow aa </p>
 </div>
- -->
+
 
 <script src="./hammer.min.js"></script>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
@@ -197,8 +197,8 @@ function resize (e) {
     targetImg.style.left = newLeft + 'px';
     targetImg.style.top = newTop + 'px';
 
-    jQuery('#viewportP').html('delta is  ' + delta + ' X: ' + e.deltaX + ' Y: ' + e.deltaY);
-    jQuery('#widthImg').html('newTop ' + newTop);
+    jQuery('#blue1').html('delta is  ' + delta + ' X: ' + e.deltaX + ' Y: ' + e.deltaY);
+    jQuery('#blue2').html('newTop ' + newTop);
 
 
 
