--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@ body {
 
 <body>
 
-<div id='green'>
+<!-- <div id='green'>
     <p id='green1'>111 qq </p>
     <p id='green2'>hellow aa </p>
-</div>
+</div> -->
 
 
 <div id='wrapper' >
