--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@ hammertime.get('swipe').set({ enable: false });
 
 // Event Listeners
 hammertime.on('pan', panImage);
-hammertime.on('pinchin', resize(event, 'in'));
-hammertime.on('pinchout', resize(event, 'out'));
+hammertime.on('pinchin', function(e){ resize(e, -1); };
+hammertime.on('pinchout', function(e){ resize(e, 1); };
 hammertime.on('doubletap', showFull);
 
 jQuery('#green').hide();
