--- a/index.html
+++ b/index.html
@@ -91,8 +91,9 @@ hammertime.get('swipe').set({ enable: false });
 hammertime.on('pan', panImage);
 hammertime.on('pinchin', function(e){ 
     jQuery('#blue1').html('inning');
-    resize(e, -1); };
-hammertime.on('pinchout', function(e){ resize(e, 1); };
+    resize(e, -1); 
+});
+hammertime.on('pinchout', function(e){ resize(e, 1); });
 hammertime.on('doubletap', showFull);
 
 jQuery('#green').hide();
